<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:padding="15dp"
    app:cardElevation="5dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/verbPicture"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="4dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"

            android:contentDescription="@string/character_picture" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/verbWordHeader"
            app:layout_constraintStart_toEndOf="@id/verbPicture"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="5dp"
            android:text="@string/verb"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/kanjiWord"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/verbWordHeader"
            android:layout_margin="5dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/slash1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/kanjiWord"
            android:layout_margin="5dp"
            android:text="@string/slash"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/kanaWord"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/slash1"
            android:layout_margin="5dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/slash2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/kanaWord"
            android:layout_margin="5dp"
            android:text="@string/slash"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/romanWord"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/slash2"
            android:layout_margin="5dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/verbTranslationHeader"
            app:layout_constraintStart_toEndOf="@id/verbPicture"
            app:layout_constraintTop_toBottomOf="@id/verbWordHeader"
            android:layout_margin="5dp"
            android:text="@string/translation"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/verbTranslation"
            app:layout_constraintStart_toEndOf="@id/verbTranslationHeader"
            app:layout_constraintTop_toBottomOf="@id/verbWordHeader"
            android:layout_margin="5dp"
            />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/verbPicture"
            app:layout_constraintTop_toBottomOf="@id/verbTranslationHeader"
            android:layout_margin="10dp"
            android:text="@string/play_audio"
            />




    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>