<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:background="@color/colorDark"
    tools:context=".RecordingActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/audio_header"
        android:shadowColor="@color/colorDark"
        android:shadowRadius="5"
        android:shadowDy="6"
        android:shadowDx="7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        android:text="@string/try_out_speaking"
        android:textAlignment="center"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <ImageView
        android:id="@+id/audio_picture"
        android:layout_marginTop="20dp"
        android:layout_margin="20dp"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:contentDescription="@string/audio_image" />

    <TextView
        android:id="@+id/audio_text_word"
        android:shadowColor="@color/colorDark"
        android:layout_margin="5dp"
        android:shadowRadius="5"
        android:shadowDy="6"
        android:shadowDx="7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textSize="16sp"
        android:text="@string/try_out_text"
        />



</LinearLayout>